// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders with disabled state 1`] = `
<button
  aria-label="Pinterest"
  className="parentButton"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
  type="button"
>
  <div
    className="button tapTransition disabled"
  >
    <div
      className="pog transparent"
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    >
      <svg
        aria-hidden={true}
        aria-label=""
        className="icon defaultIcon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`IconButton renders with icon 1`] = `
<button
  aria-label="Pinterest"
  className="parentButton"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="button tapTransition enabled"
  >
    <div
      className="pog transparent"
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    >
      <svg
        aria-hidden={true}
        aria-label=""
        className="icon defaultIcon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`IconButton renders with svg 1`] = `
<button
  aria-label="Pinterest"
  className="parentButton"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="button tapTransition enabled"
  >
    <div
      className="pog transparent"
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    >
      <svg
        aria-hidden={true}
        aria-label=""
        className="icon defaultIcon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="M13.00,20.00"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`IconButton renders with tooltip 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label="This Pin is private unless you share it with others."
    className="box"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-label="Share"
      className="parentButton"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button tapTransition enabled"
      >
        <div
          className="pog transparent"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon defaultIcon iconBlock"
            height={20}
            role="img"
            viewBox="0 0 24 24"
            width={20}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`IconButton renders with tooltip and no accessibilityLabel 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label=""
    className="box"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-label="Share"
      className="parentButton"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button tapTransition enabled"
      >
        <div
          className="pog transparent"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon defaultIcon iconBlock"
            height={20}
            role="img"
            viewBox="0 0 24 24"
            width={20}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;
